Initial adjustements for icon setup

--- a/configs/envs/.env.main.L2
+++ b/configs/envs/.env.main.L2
@@ -33,6 +33,9 @@ NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/blockscout/frontend-c
 ## misc
 ## views
 NEXT_PUBLIC_VIEWS_ADDRESS_IDENTICON_TYPE=gradient_avatar
+NEXT_PUBLIC_ALGOLIA_APP_ID=xxx
+NEXT_PUBLIC_ALGOLIA_API_KEY=xxx
+NEXT_PUBLIC_ALGOLIA_INDEX_NAME=xxx
 
 # app features
 NEXT_PUBLIC_APP_INSTANCE=local
