--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -79,13 +79,10 @@ jobs:
       - name: Install script dependencies
         run: cd ./deploy/tools/envs-validator && yarn --frozen-lockfile --ignore-optional
 
-      - name: Copy secrets file
-        run: cp ./.env.example ./configs/envs/.env.secrets
-
-      - name: Run validation script
+      - name: Run validation tests
         run: |
           set +e
-          cd ./deploy/tools/envs-validator && yarn dev
+          cd ./deploy/tools/envs-validator && yarn test
           exitcode="$?"
           echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
           exit "$exitcode"
