--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@opentelemetry/sdk-node": "^0.45.0",
     "@opentelemetry/sdk-trace-node": "^1.18.0",
     "@opentelemetry/semantic-conventions": "^1.18.0",
+    "@next/bundle-analyzer": "^14.0.1",
     "@sentry/cli": "^2.21.2",
     "@sentry/react": "^7.72.0",
     "@slise/embed-react": "^2.2.0",
