Add aspect tag in transaction tag (#1)
* initial

* feat: :zap: Add 'aspect' tag to transaction tag

* fix: :pencil2: rename all rowInput to rawInput

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "d3": "^7.6.1",
     "dayjs": "^1.11.5",
     "dom-to-image": "^2.6.0",
+    "ethers": "^6.9.0",
     "framer-motion": "^6.5.1",
     "graphiql": "^2.2.0",
     "graphql": "^16.6.0",
