--- a/configs/envs/.env.localhost
+++ b/configs/envs/.env.localhost
@@ -6,6 +6,8 @@
 NEXT_PUBLIC_APP_PROTOCOL=http
 NEXT_PUBLIC_APP_HOST=localhost
 NEXT_PUBLIC_APP_PORT=3000
+NEXT_PUBLIC_NETWORK_LOGO=https://football.bcsports.io/icons/logo.svg
+NEXT_PUBLIC_NETWORK_ICON=https://football.bcsports.io/icons/logo.svg
 
 # blockchain parameters
 NEXT_PUBLIC_NETWORK_NAME=POA
