feat: change plate text && color

--- a/configs/envs/.env.localhost
+++ b/configs/envs/.env.localhost
@@ -10,8 +10,8 @@ NEXT_PUBLIC_NETWORK_LOGO=https://football.bcsports.io/icons/logo.svg
 NEXT_PUBLIC_NETWORK_ICON=https://football.bcsports.io/icons/logo.svg
 
 # blockchain parameters
-NEXT_PUBLIC_NETWORK_NAME=POA
-NEXT_PUBLIC_NETWORK_SHORT_NAME=POA
+NEXT_PUBLIC_NETWORK_NAME=Awesome chain
+NEXT_PUBLIC_NETWORK_SHORT_NAME=Awesome chain
 NEXT_PUBLIC_NETWORK_ID=99
 NEXT_PUBLIC_NETWORK_CURRENCY_NAME=POA
 NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=POA
@@ -33,6 +33,8 @@ NEXT_PUBLIC_FEATURED_NETWORKS=https://raw.githubusercontent.com/blockscout/front
 ## footer
 ## misc
 NEXT_PUBLIC_NETWORK_EXPLORERS=[{'title':'Anyblock','baseUrl':'https://explorer.anyblock.tools','paths':{'tx':'/ethereum/poa/core/transaction','address':'/ethereum/poa/core/address'}}]
+#plate
+NEXT_PUBLIC_HOMEPAGE_PLATE_BACKGROUND=rgb(24, 24, 25);
 
 # app features
 NEXT_PUBLIC_APP_ENV=development
